
2008-08-25

   * [FEATURE]  The Codes-Box now tracks the caret position 
   * [FEATURE]  Rewind action (CTRL-ALT-LEFT) moves back in view history until
                filter is different
   * [FEATURE]  Detached the CodeBox from the DocumentView, so that it's position 
                and size can now be handeled using the docking system.
   * [MINOR]    Include codes into all relevant parts even if nested
   * [MINOR]    Use search engine backend in all search dialogs (notably Visualization)
   * [MINOR]    Fix-ups to Code Detail View
   * [MINOR]    Improved handling of Date Sorted view in Code Detail View
   * [INTERNAL] Deprecate TagCommaSyntax
   * [INTERNAL] Improve generics for TreeWalker 
   * [INTERNAL] Removed generic warnings  

2008-08-21

   * [FEATURE] Added HyperLinks for in Code Detail View
   * [FEATURE] Added CodeCompleters to all TextFields (CTRL-SPACE)
   * [MINOR] Improved Code Detail View with regards to subcodes display
   * [MINOR] Robust highlighting support in Document View
   * [DEP] Moved to JUnit 4 using Annotations
   * [INTERNAL] Introduced the use of Annotation based dependency injection
   * [DEP] Moved to PicoContainer 2.5.1 to get some CompositeInjection goodness

2008-08-20

   * Improved Code Detail View for better information about Properties

2008-08-19

   * First implementation of improved query support for properties
   * Put tabulation calculation in background thread
   * Improved GmaneImporter to deal with errors in Gmane output
   * Fixed Refetch List action
   * Fixed bug in CodeBox with regards to Code Completion
   * Introduced Slices as an abstraction for working with the CodeModel. 

2008-08-15

   * First implementation of cross tabulation support
   * More robust indentation
   * Better detection of boundary chars for content assist
   * Fixed bug in Sorting the Code Detail View 

2008-08-14

   * More robust handling of , and }
   * Fixed NPE in Comparing of PDs
   * Sort codes by date in Code Detail View
