@@ -1,11 +1,16 @@
 <html>
 	<head>
 		<style type="text/css">
-			table.my {
+		    body {
+		    	font-size: 10pt;
+		    }
+		    table.my {
 				border-color: #808080;
 			}
 			table.my td {
 				padding: 4px;
+				border-top-width:1pt; 
+				border-style:solid;
 			}
 			table.my th {
 			    text-align: left;
