@@ -7,30 +7,37 @@ import de.fu_berlin.inf.gmanda.util.CMultimap;
 /**
  * Immutable
  */
-public interface Slice {
+public interface Slice<T> {
+	
+	
 	
 	/**
 	 * Returns the documents currently presented by this slice
 	 * @return
 	 */
-	public CMultimap<PrimaryDocument, Code> getDocuments();
+	public CMultimap<T, Code> getDocuments();
 	
 	/**
 	 * Taking the current set of documents, returns a slice centerd on the given code.
 	 */
-	public Slice select(Code code);
+	public Slice<T> select(Code code);
 		 
 	/**
 	 * Returns a subset of the this slice, by filtering all documents 
 	 * that do not contain the given code
 	 * at the currently selected level
 	 */
-	public Slice filter(Code code);
+	public Slice<T> filter(Code code);
 	
 	/**
 	 * Returns a map of subslices based on the trimmed values for the given code. 
 	 */
-	public Map<String, Slice> slice();
+	public Map<String, Slice<T>> slice();
+	
+	public Map<String, Slice<T>> slice(String by, int depth);
+	
+	public Slice<String> sliceAndPack(String by, int depth);
+		
 	
 
 }
